contrib/db_pools/codegen/tests/ui-fail-stable/database-syntax.stderr
error: invalid value: expected string literal
 --> tests/ui-fail-stable/database-syntax.rs:4:12
  |
3 | #[derive(Database)]
  |          -------- in this derive macro expansion
4 | #[database(123)]
  |            ^^^
  |
  = note: this error originates in the derive macro `Database` (in Nightly builds, run with -Z macro-backtrace for more info)

error: [note] error occurred while deriving `Database`
 --> tests/ui-fail-stable/database-syntax.rs:3:10
  |
3 | #[derive(Database)]
  |          ^^^^^^^^
  |
  = note: this error originates in the derive macro `Database` (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected key/value `key = value`
 --> tests/ui-fail-stable/database-syntax.rs:8:25
  |
7 | #[derive(Database)]
  |          -------- in this derive macro expansion
8 | #[database("some-name", "another")]
  |                         ^^^^^^^^^
  |
  = note: this error originates in the derive macro `Database` (in Nightly builds, run with -Z macro-backtrace for more info)

error: [note] error occurred while deriving `Database`
 --> tests/ui-fail-stable/database-syntax.rs:7:10
  |
7 | #[derive(Database)]
  |          ^^^^^^^^
  |
  = note: this error originates in the derive macro `Database` (in Nightly builds, run with -Z macro-backtrace for more info)

error: unexpected attribute parameter: `name`
  --> tests/ui-fail-stable/database-syntax.rs:12:25
   |
11 | #[derive(Database)]
   |          -------- in this derive macro expansion
12 | #[database("some-name", name = "another")]
   |                         ^^^^
   |
   = note: this error originates in the derive macro `Database` (in Nightly builds, run with -Z macro-backtrace for more info)

error: [note] error occurred while deriving `Database`
  --> tests/ui-fail-stable/database-syntax.rs:11:10
   |
11 | #[derive(Database)]
   |          ^^^^^^^^
   |
   = note: this error originates in the derive macro `Database` (in Nightly builds, run with -Z macro-backtrace for more info)

error: enums are not supported
  --> tests/ui-fail-stable/database-syntax.rs:16:1
   |
15 | #[derive(Database)]
   |          -------- in this derive macro expansion
16 | #[database("foo")]
   | ^
   |
   = note: this error originates in the derive macro `Database` (in Nightly builds, run with -Z macro-backtrace for more info)

error: [note] error occurred while deriving `Database`
  --> tests/ui-fail-stable/database-syntax.rs:15:10
   |
15 | #[derive(Database)]
   |          ^^^^^^^^
   |
   = note: this error originates in the derive macro `Database` (in Nightly builds, run with -Z macro-backtrace for more info)

error: missing `#[database("name")]` attribute
  --> tests/ui-fail-stable/database-syntax.rs:20:1
   |
19 | #[derive(Database)]
   |          -------- in this derive macro expansion
20 | struct E(deadpool_postgres::Pool);
   | ^^^^^^
   |
   = note: this error originates in the derive macro `Database` (in Nightly builds, run with -Z macro-backtrace for more info)

error: [note] error occurred while deriving `Database`
  --> tests/ui-fail-stable/database-syntax.rs:19:10
   |
19 | #[derive(Database)]
   |          ^^^^^^^^
   |
   = note: this error originates in the derive macro `Database` (in Nightly builds, run with -Z macro-backtrace for more info)

error: struct must have exactly one unnamed field
  --> tests/ui-fail-stable/database-syntax.rs:23:1
   |
22 | #[derive(Database)]
   |          -------- in this derive macro expansion
23 | #[database("foo")]
   | ^
   |
   = note: this error originates in the derive macro `Database` (in Nightly builds, run with -Z macro-backtrace for more info)

error: [note] error occurred while deriving `Database`
  --> tests/ui-fail-stable/database-syntax.rs:22:10
   |
22 | #[derive(Database)]
   |          ^^^^^^^^
   |
   = note: this error originates in the derive macro `Database` (in Nightly builds, run with -Z macro-backtrace for more info)

error: struct must have exactly one unnamed field
  --> tests/ui-fail-stable/database-syntax.rs:27:1
   |
26 | #[derive(Database)]
   |          -------- in this derive macro expansion
27 | #[database("foo")]
   | ^
   |
   = note: this error originates in the derive macro `Database` (in Nightly builds, run with -Z macro-backtrace for more info)

error: [note] error occurred while deriving `Database`
  --> tests/ui-fail-stable/database-syntax.rs:26:10
   |
26 | #[derive(Database)]
   |          ^^^^^^^^
   |
   = note: this error originates in the derive macro `Database` (in Nightly builds, run with -Z macro-backtrace for more info)

error: named structs are not supported
  --> tests/ui-fail-stable/database-syntax.rs:31:1
   |
30 | #[derive(Database)]
   |          -------- in this derive macro expansion
31 | #[database("foo")]
   | ^
   |
   = note: this error originates in the derive macro `Database` (in Nightly builds, run with -Z macro-backtrace for more info)

error: [note] error occurred while deriving `Database`
  --> tests/ui-fail-stable/database-syntax.rs:30:10
   |
30 | #[derive(Database)]
   |          ^^^^^^^^
   |
   = note: this error originates in the derive macro `Database` (in Nightly builds, run with -Z macro-backtrace for more info)
